# smart-skills

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
distribution/homebrew/: smart-skills.rb
distribution/scripts/: install.sh
examples/: config.json
examples/skills/code-review/: SKILL.md
examples/skills/planning/: SKILL.md
src/: main.rs
src/cli/: colors.rs  commands.rs  init.rs  mod.rs  picker.rs
src/config/: mod.rs
src/skills/: generator.rs  installer.rs  loader.rs  mod.rs
tests/: cli_tests.rs  init_tests.rs  integration_tests.rs  skill_tests.rs
